2.1.1/_sources/gallery/lines_bars_and_markers/broken_barh.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_broken_barh.py:


===========
Broken Barh
===========

Make a "broken" horizontal bar plot, i.e., one with gaps




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_broken_barh_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()
    ax.broken_barh([(110, 30), (150, 10)], (10, 9), facecolors='blue')
    ax.broken_barh([(10, 50), (100, 20), (130, 10)], (20, 9),
                   facecolors=('red', 'yellow', 'green'))
    ax.set_ylim(5, 35)
    ax.set_xlim(0, 200)
    ax.set_xlabel('seconds since start')
    ax.set_yticks([15, 25])
    ax.set_yticklabels(['Bill', 'Jim'])
    ax.grid(True)
    ax.annotate('race interrupted', (61, 25),
                xytext=(0.8, 0.9), textcoords='axes fraction',
                arrowprops=dict(facecolor='black', shrink=0.05),
                fontsize=16,
                horizontalalignment='right', verticalalignment='top')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: broken_barh.py <broken_barh.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: broken_barh.ipynb <broken_barh.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
